--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -12,7 +12,12 @@
     min-height: 5vh;
 }
 .user-image{
-    max-width: 150px;
-    max-height: 150px;
-    margin-top: 50px
+    width: 20vh;
+    height: 20vh;
+    border-radius: 50%;
+    margin-top: 100px;
+    margin-bottom: 20px;
+}
+.user-name{
+    position: relative;
 }
