--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -5,6 +5,8 @@
     background-color: black;
     z-index: 1;
     float: left;
+    position: relative;
+    overflow: hidden;
 }
 .frame-navbar{
     background-color: crimson;
@@ -12,17 +14,28 @@
     min-height: 5vh;
 }
 .user-image{
-    width: 20vh;
-    height: 20vh;
-    border-radius: 50%;
+    width: 15vh;
+    height: auto;
+    border-radius: 70%;
     margin-top: 100px;
     margin-bottom: 20px;
 }
 .user-panel{
-    font-size: 20px;
+    font-size: 1.5vw;
+}
+.user-panel-name{
+    font-size: 2vw;
+    color: azure;
 }
 
 .user-panel-1, .user-panel-2, .user-panel-3{
     margin-top: 15px;
     display: block;
+}
+.alert{
+    display: none;
+}
+.card{
+    margin-left: 8vh;
+    margin-top: 4vh;
 }
