--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -14,14 +14,14 @@
     min-height: 5vh;
 }
 .user-image{
-    width: 15vw;
+    width: 15vh;
     height: 15vh;
-    border-radius: 70%;
+    border-radius: 50%;
     margin-top: 100px;
     margin-bottom: 20px;
 }
 .user-panel{
-    font-size: 1.5vw;
+    font-size: 1.25vw;
 }
 .user-panel-name{
     font-size: 2vw;
