--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -1,13 +1,3 @@
-.side-navbar{
-    width: 15%;
-    min-width: 10vh;
-    height: 100vh;
-    background-color: black;
-    z-index: 1;
-    float: left;
-    position: relative;
-    overflow: hidden;
-}
 .frame-navbar{
     background-color: crimson;
     height: 5%;
@@ -50,13 +40,11 @@
     .option{
         display: inline;
     }
-    .side-navbar{
-        display: none;
-        z-index: 1;
-        width: 50%;
+    .option a{
         position: absolute;
-        height: 100vw;
-        opacity: 0.7;
+    }
+    .side-navbar-dsktop{
+        display: none;
     }
     .frame-navbar{
         width: 100%;
@@ -78,11 +66,18 @@
     .side-nav-close{
         display: none;
     }
-    .side-navbar{
-        display: block;
+    .side-navbar-dsktop{
+        width: 15%;
+        min-width: 10vh;
+        height: 100vh;
+        background-color: black;
+        z-index: 1;
         float: left;
-        transition: 10s;
-        position: absolute;
+        position: relative;
+        overflow-x: hidden;
+    }
+    .side-navbar-mbile{
+        display: none;
     }
     .frame-navbar{
         position: relative;
