--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -1,9 +1,9 @@
 .frame-navbar{
-    background-color: crimson;
+    background-color: #0048BA;
     height: 5%;
     min-height: 5vh;
 }
-#collpse{
+#user-collpse{
     background-color: black;
 }
 ul{
@@ -50,7 +50,17 @@ ul{
 .nav-tabs{
     margin-left: 20vw;
 }
-
+#menu-item-1, #menu-item-2, #menu-item-3, #menu-item-4{
+    background-color: #F28E1C;
+}
+#menu-item-1{
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+#menu-item-4{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
 @media (max-width: 961px){
     .option{
         display: inline;
