--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("BackgroundWeb2.png");
+    background-image: url("imageedit_31_4148023806.png");
     z-index: -10;
 }
 .frame-navbar{
