--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -3,7 +3,7 @@ body{
     z-index: -10;
 }
 .frame-navbar{
-    background-color: #0048BA;
+    background-color: #0F2B92;
     height: 5%;
     min-height: 5vh;
 }
@@ -54,16 +54,32 @@ ul{
 .nav-tabs{
     margin-left: 20vw;
 }
-#menu-item-1, #menu-item-2, #menu-item-3, #menu-item-4{
-    background-color: #F28E1C;
+.nav-item{
+    background-color: #D79600;
+}
+.nav-item a{
+    color: black;
+}
+.nav-item:hover, .nav-item a:focus{
+    background-color: #956800;
+    color: #0F2B92;
 }
 #menu-item-1{
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 #menu-item-4{
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.card-img-top{
+    width: 150px;
+    height: 125px;
+    align-self: center;
+    margin-top: 20px;
+}
+.card-body{
+    text-align: center;
 }
 @media (max-width: 961px){
     .option{
