--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -13,6 +13,10 @@ body{
 ul{
     list-style: none;
 }
+.dsktop{
+    background-color: black;
+    opacity: 0.5;
+}
 .user-image{
     width: 15vh;
     height: 15vh;
@@ -73,20 +77,32 @@ ul{
     border-bottom-right-radius: 4px;
 }
 .card-img-top{
-    width: 150px;
+    width: 200px;
     height: 125px;
-    align-self: center;
     margin-top: 20px;
+    margin-left: 20px
 }
 .card-body{
     text-align: center;
+    color: black;
 }
+.main-event{
+    width: 80vw;
+}
+
 @media (max-width: 961px){
+    .dsktop, .sub-event{
+        display: none;
+    }
     .option{
         display: inline;
     }
     .option a{
         position: relative;
+    }
+    .main-event{
+        margin-right: 2vh;
+        margin-left: 1vh;
     }
     .side-navbar-dsktop{
         display: none;
@@ -121,6 +137,9 @@ ul{
     .option{
         display: none;
     }
+    .main-event{
+        margin-left: 20vh;
+    }
     .side-nav-close{
         display: none;
     }
@@ -128,7 +147,7 @@ ul{
         background-image: url("BackGroundUser.png");
         width: 15%;
         min-width: 10vh;
-        height: 100vh;
+        height: 100vw;
         background-color: black;
         z-index: 1;
         float: left;
