--- a/Frontend folder/Css/event.css
+++ b/Frontend folder/Css/event.css
@@ -18,13 +18,13 @@
     background-color: black;
     opacity: 0.7;
     color: azure;
-    width: 70vh;
+    width: 80vh;
     margin-top: 5vh
 }
 .sub-event-description-button{
     background-color: #D79600;
     color: black;
-    width: 70vh;
+    width: 80vh;
     margin-top: 5vh;
     padding-left: 2vh;
     border-radius: 10px;
@@ -42,6 +42,11 @@
         height: 100px;
     }
     .mbile-sub-event-img{
-        margin-left: 15vh;
+        margin-left: 25vh;
+    }
+}
+@media (min-width: 960px) {
+    .mbile{
+        display: none;
     }
 }
