--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -1,163 +1,17 @@
-body{
-    background-image: url("imageedit_31_4148023806.png");
-    z-index: -10;
+.side-navbar{
+    width: 15vw;
+    height: 80vh;
+    background-color: darkblue;
+    opacity: 0.75;
+    position: relative;
+    display: inline-block;
+    margin: none;
 }
-.frame-navbar{
-    background-color: #0F2B92;
-    height: 5%;
-    min-height: 5vh;
-}
-#user-collpse{
-    background-color: black;
-}
-ul{
-    list-style: none;
-}
+.main{
+    width: 84vw;
+    height: 80vh;
+    background-color: green;
+    position: relative;
+    display: inline-block;
 
-.user-image{
-    width: 15vh;
-    height: 15vh;
-    border-radius: 50%;
-    margin-top: 100px;
-    margin-bottom: 20px;
-}
-.user-panel{
-    font-size: 1.25vw;
-}
-.main-event-name{
-    text-align: center;
-}
-.user-panel-name{
-    font-size: 1.75vw;
-    color: azure;
-    margin-left: 5px;
-}
-
-.user-panel-1, .user-panel-2, .user-panel-3{
-    margin-top: 15px;
-    margin-right: 15px;
-    color: grey;
-    display: block;
-}
-.alert{
-    display: none;
-}
-.card{
-    margin-left: 4vw;
-    margin-top: 4vh;
-}
-.option a{
-    color: black;
-}
-.user-panel a{
-    color: silver;
-}
-.user-panel a:focus, .user-panel a:hover{
-    color: grey;
-}
-.nav-tabs{
-    margin-left: 20vw;
-}
-.nav-item{
-    background-color: #D79600;
-}
-.nav-item a{
-    color: black;
-}
-.nav-item:hover, .nav-item a:focus{
-    background-color: #956800;
-    color: #0F2B92;
-}
-#menu-item-1{
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-}
-#menu-item-4{
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-.card-img-top{
-    width: 200px;
-    height: 125px;
-    margin-top: 20px;
-    margin-left: 20px
-}
-.card-body{
-    text-align: center;
-    color: black;
-}
-.main-event{
-    width: 80vw;
-}
-
-@media (max-width: 961px){
-    .dsktop, .sub-event{
-        display: none;
-    }
-    .option{
-        display: inline;
-    }
-    .option a{
-        position: relative;
-    }
-    .main-event{
-        margin-right: 2vh;
-        margin-left: 1vh;
-    }
-    .side-navbar-dsktop{
-        display: none;
-    }
-    .frame-navbar{
-        width: 100vw;
-        overflow-x: hidden;
-    }
-    .card-control{
-        max-width: 75vw;
-    }
-    .card{
-        width: 50vw;
-    }
-    .user-panel{
-        font-size: 1.75vw;
-        padding-right: 20px;
-    }
-    .user-panel-name{
-        font-size: 2.0vw;
-        color: azure;
-    }
-    .container{
-        margin-left: 12.5vh;
-    }
-    .nav-item{
-        font-size: 1.75vw;
-    }
-}
-
-@media (min-width: 960px){
-    .option{
-        display: none;
-    }
-    .main-event{
-        margin-left: 20vh;
-    }
-    .side-nav-close{
-        display: none;
-    }
-    .side-navbar-dsktop{
-        background-image: url("BackGroundUser.png");
-        width: 15%;
-        min-width: 10vh;
-        height: 100vw;
-        background-color: black;
-        z-index: 1;
-        float: left;
-        position: relative;
-        overflow-y: hidden;
-    }
-    .side-navbar-mbile{
-        display: none;
-    }
-    .frame-navbar{
-        position: relative;
-    }
 }
