--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -1,6 +1,6 @@
 .side-navbar{
-    width: 15vw;
-    height: 80vh;
+    width: 15%;
+    height: 100%;
     background-color: darkblue;
     opacity: 0.75;
     position: relative;
@@ -8,10 +8,19 @@
     margin: none;
 }
 .main{
-    width: 84vw;
-    height: 80vh;
+    width: 84.5%;
+    height: 100%;
     background-color: green;
     position: relative;
     display: inline-block;
-
 }
+.main-navbar{
+    width: 100%;
+    height: 20%;
+    background-color: black;
+}
+.content{
+    width: 100vw;
+    height: 100vh;
+}
+@media ;
