--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -1,26 +1,95 @@
-.side-navbar{
-    width: 15%;
-    height: 100%;
-    background-color: darkblue;
-    opacity: 0.75;
-    position: relative;
-    display: inline-block;
-    margin: none;
-}
-.main{
-    width: 84.5%;
-    height: 100%;
-    background-color: green;
-    position: relative;
-    display: inline-block;
-}
-.main-navbar{
-    width: 100%;
-    height: 20%;
-    background-color: black;
-}
+
 .content{
     width: 100vw;
     height: 100vh;
+    position: relative;
+    padding: 1px;
 }
-@media ;
+@media screen and (min-width: 1024px){
+    .mobile{
+        display: none;
+    }
+    .side-navbar{
+        width: 15%;
+        height: 100%;
+        background-color: darkblue;
+        opacity: 0.75;
+        display: inline-block;
+        margin-right: 1px;
+        margin-left: 1px;
+        padding: 4px;
+        position: relative;
+        float: left;
+    }
+    .main{
+        width: 83%;
+        height: 100%;
+        background-color: green;
+        display: inline-block;
+        position: relative;
+    }
+    .side-navbar-user-image img{
+        border-radius: 100%;
+        width: 80%;
+        height: auto;
+    }
+    .side-navbar-user-image{
+        margin-top: 20%;
+        margin-left: 20%;
+    }
+    .side-navbar-name{
+        margin-left: 10%;
+    }
+    .side-navbar-name h1{
+        font-size: 250%;
+    }
+    .side-navbar-menu{
+        text-align: left;
+        font-size: 120%;
+        margin-left: 25%;
+    }
+    .side-navbar-menu a{
+        color: black;
+    }
+    .side-navbar-menu br{
+        margin-bottom: 10%;
+    }
+    .side-navbar-menu a:hover{
+        color: white;
+        text-decoration: none;
+    }
+    .main-pageselector{
+        width: 100%;
+        height: 100%;
+    }
+    .main-pageselector .tablink{
+        background-color: grey;
+        color: black;
+        float: left;
+        border: none;
+        outline: none !important;
+        cursor: pointer;
+        padding: 14px 16px;
+        font-size: 17px;
+        width: 25%;
+    }
+    .main-pageselector .tablink:hover{
+        background-color: crimson;
+    }
+    .main-pageselector .tabcontent{
+        display: none;
+        padding: 100px 20px;
+        height: 100%;
+    }
+    #content1{
+        background-color: red;
+    }
+    #content2{
+        background-color: blue;
+    }
+}
+@media screen and (max-width: 1024px){
+    .dsktop{
+        display: none;
+    }
+}
