--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -34,8 +34,9 @@
         height: auto;
     }
     .side-navbar-user-image{
-        margin-top: 20%;
+        margin-top: 10%;
         margin-left: 20%;
+        margin-bottom: 10%;
     }
     .side-navbar-name{
         margin-left: 10%;
@@ -45,14 +46,14 @@
     }
     .side-navbar-menu{
         text-align: left;
-        font-size: 120%;
+        font-size: 110%;
         margin-left: 25%;
     }
     .side-navbar-menu a{
         color: black;
     }
     .side-navbar-menu br{
-        margin-bottom: 10%;
+        margin-bottom: 5%;
     }
     .side-navbar-menu a:hover{
         color: white;
@@ -61,8 +62,10 @@
     .main-pageselector{
         width: 100%;
         height: 100%;
+        position: relative;
+        overflow: hidden;
     }
-    .main-pageselector .tablink{
+    .tablink{
         background-color: grey;
         color: black;
         float: left;
@@ -73,20 +76,24 @@
         font-size: 17px;
         width: 25%;
     }
-    .main-pageselector .tablink:hover{
+    .tablink:hover{
         background-color: crimson;
     }
-    .main-pageselector .tabcontent{
+    .tabcontent {
+        color: white;
         display: none;
         padding: 100px 20px;
         height: 100%;
-    }
-    #content1{
-        background-color: red;
-    }
-    #content2{
-        background-color: blue;
-    }
+        
+      }
+      .tab-ovf{
+          overflow-wrap: break-word;
+      }
+      
+      #Home {background-color: red;}
+      #News {background-color: green;}
+      #Contact {background-color: blue;}
+      #About {background-color: orange;}
 }
 @media screen and (max-width: 1024px){
     .dsktop{
