--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -99,4 +99,87 @@
     .dsktop{
         display: none;
     }
+    .head-navbar{
+        width: 100%;
+        display: block;
+        height: 10%;
+        background-color: #031424;
+        font-size: 300%;
+    }
+    .head-navbar a{
+        color: #30415D;
+        text-decoration: none;
+        margin-left: 5%;
+    }
+    .head-navbar a:hover{
+        color: #8EAEBD;
+    }
+    .main-content-mobile{
+        width: 100%;
+        height: 90%;
+        background-color: #30415D;
+    }
+    .main-content-mobile-menu {
+        height: 100%; /* 100% Full-height */
+        width: 0; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0; /* Stay at the top */
+        left: 0;
+        background-color: #111; /* Black*/
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 60px; /* Place content 60px from the top */
+        transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    }
+    .main-content-mobile-menu img{
+        border-radius: 100%;
+        margin-left: 20%;
+    }
+    /* The navigation menu links */
+    .main-content-mobile-menu a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+    }
+    
+    /* When you mouse over the navigation links, change their color */
+    .main-content-mobile-menu a:hover {
+        color: #f1f1f1;
+    }
+    
+    /* Position and style the close button (top right corner) */
+    .main-content-mobile-menu .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+    }
+    .tablink{
+        background-color: grey;
+        color: black;
+        float: left;
+        border: none;
+        outline: none !important;
+        cursor: pointer;
+        padding: 14px 16px;
+        font-size: 17px;
+        width: 25%;
+    }
+    .tablink:hover{
+        background-color: #8EAEBD;
+    }
+    .tabcontent {
+        color: white;
+        display: none;
+        padding: 100px 20px;
+        height: 100%;
+      }
+      #Home {background-color: red;}
+      #News {background-color: green;}
+      #Contact {background-color: blue;}
+      #About {background-color: orange;}
 }
