--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -5,6 +5,9 @@
     position: relative;
     padding: 1px;
 }
+.tabcontent{
+    display: none;
+}
 @media screen and (min-width: 1024px){
     .mobile{
         display: none;
@@ -81,7 +84,6 @@
     }
     .tabcontent {
         color: white;
-        display: none;
         padding: 100px 20px;
         height: 100%;
         
@@ -102,9 +104,9 @@
     .head-navbar{
         width: 100%;
         display: block;
-        height: 10%;
+        min-height: 10%;
         background-color: #031424;
-        font-size: 300%;
+        font-size: 200%;
     }
     .head-navbar a{
         color: #30415D;
@@ -120,16 +122,16 @@
         background-color: #30415D;
     }
     .main-content-mobile-menu {
-        height: 100%; /* 100% Full-height */
-        width: 0; /* 0 width - change this with JavaScript */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Stay on top */
-        top: 0; /* Stay at the top */
+        height: 100%;
+        width: 0;
+        position: fixed; 
+        z-index: 1;
+        top: 0;
         left: 0;
-        background-color: #111; /* Black*/
-        overflow-x: hidden; /* Disable horizontal scroll */
-        padding-top: 60px; /* Place content 60px from the top */
-        transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+        background-color: #111; 
+        overflow-x: hidden; 
+        padding-top: 60px; 
+        transition: 0.5s; 
     }
     .main-content-mobile-menu img{
         border-radius: 100%;
@@ -169,12 +171,8 @@
         font-size: 17px;
         width: 25%;
     }
-    .tablink:hover{
-        background-color: #8EAEBD;
-    }
     .tabcontent {
         color: white;
-        display: none;
         padding: 100px 20px;
         height: 100%;
       }
@@ -182,4 +180,5 @@
       #News {background-color: green;}
       #Contact {background-color: blue;}
       #About {background-color: orange;}
+
 }
