--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -15,8 +15,7 @@
     .side-navbar{
         width: 15%;
         height: 100%;
-        background-color: darkblue;
-        opacity: 0.75;
+        background-color: #30415D;
         display: inline-block;
         margin-right: 1px;
         margin-left: 1px;
@@ -27,7 +26,7 @@
     .main{
         width: 83%;
         height: 100%;
-        background-color: green;
+        background-color: #031424;
         display: inline-block;
         position: relative;
     }
@@ -69,7 +68,7 @@
         overflow: hidden;
     }
     .tablink{
-        background-color: grey;
+        background-color: #30415D;
         color: black;
         float: left;
         border: none;
@@ -80,22 +79,22 @@
         width: 25%;
     }
     .tablink:hover{
-        background-color: crimson;
+        background-color: #031424;
+        color: azure;
     }
     .tabcontent {
         color: white;
         padding: 100px 20px;
         height: 100%;
-        
       }
       .tab-ovf{
           overflow-wrap: break-word;
       }
       
-      #Home {background-color: red;}
-      #News {background-color: green;}
-      #Contact {background-color: blue;}
-      #About {background-color: orange;}
+      #Home {background-color: #8EADBD;}
+      #News {background-color: #8EADBD;}
+      #Contact {background-color: #8EADBD;}
+      #About {background-color: #8EADBD;}
 }
 @media screen and (max-width: 1024px){
     .dsktop{
