--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -26,7 +26,7 @@
     .main{
         width: 83%;
         height: 100%;
-        background-color: #031424;
+        background-color: #8EADBD;
         display: inline-block;
         position: relative;
     }
