--- a/Frontend folder/Css/main.css
+++ b/Frontend folder/Css/main.css
@@ -18,11 +18,9 @@
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
-        overflow: hidden;
     }
     .column-container column{
         flex: 1;
-    }
     }
     .side-navbar{
         width: 15%;
@@ -35,7 +33,7 @@
         float: left;
     }
     .main{
-        width: 83%;
+        width: 85%;
         background-color: #8EADBD;
         display: inline-block;
         position: relative;
@@ -107,7 +105,10 @@
 }
 @media screen and (max-width: 1024px){
     .dsktop{
-        display: none !important;
+        display: none;
+    }
+    .content{
+        height: 100vh;
     }
     .head-navbar{
         width: 100%;
@@ -126,8 +127,9 @@
     }
     .main-content-mobile{
         width: 100%;
-        height: 90%;
+        min-height: 100vh;
         background-color: #30415D;
+        height: auto;
     }
     .main-content-mobile-menu {
         height: 100%;
